tests/ui/lint/snapshots/fix_needless_match_result.snap
---
source: tests/ui/lint/fixes.rs
---
pub fn f(r: Result<int, string>) -> Result<int, string> {
  match r { Ok(x) => Ok(x), Err(e) => Err(e) }
}
=== fixed ===
pub fn f(r: Result<int, string>) -> Result<int, string> {
  r
}
