tests/ui/lint/snapshots/fix_needless_question_mark.snap
---
source: tests/ui/lint/fixes.rs
---
fn consume() -> Option<int> {
  let x: Option<int> = Some(1)
  Some(x?)
}
=== fixed ===
fn consume() -> Option<int> {
  let x: Option<int> = Some(1)
  x
}
