tests/ui/lint/snapshots/fix_neg_multiply.snap
---
source: tests/ui/lint/fixes.rs
---
fn negate(x: int) -> int {
  x * -1
}
=== fixed ===
fn negate(x: int) -> int {
  -x
}
