tests/ui/lint/snapshots/fix_negated_equality_not_equal.snap
---
source: tests/ui/lint/fixes.rs
---
fn main() {
  let a = true;
  let b = false;
  let _ = !(a != b)
}
=== fixed ===
fn main() {
  let a = true;
  let b = false;
  let _ = a == b
}
