tests/ui/lint/snapshots/fix_or_fn_call.snap
---
source: tests/ui/lint/fixes.rs
---
pub fn f(o: Option<int>) -> int {
  o.unwrap_or(fallback())
}

fn fallback() -> int { 7 }
=== fixed ===
pub fn f(o: Option<int>) -> int {
  o.unwrap_or_else(|| fallback())
}

fn fallback() -> int { 7 }
