tests/ui/lint/snapshots/fix_or_fn_call_result_callback_takes_error.snap
---
source: tests/ui/lint/fixes.rs
---
pub fn f(r: Result<int, string>) -> int {
  r.unwrap_or(fallback())
}

fn fallback() -> int { 7 }
=== fixed ===
pub fn f(r: Result<int, string>) -> int {
  r.unwrap_or_else(|_| fallback())
}

fn fallback() -> int { 7 }
