tests/ui/lint/snapshots/fix_redundant_closure.snap
---
source: tests/ui/lint/fixes.rs
---
pub fn apply(xs: Slice<int>) -> Slice<int> {
  xs.map(|x| double(x))
}

fn double(n: int) -> int { n * 2 }
=== fixed ===
pub fn apply(xs: Slice<int>) -> Slice<int> {
  xs.map(double)
}

fn double(n: int) -> int { n * 2 }
